2001-06-05  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkcolorsel.c: Use new mnemonic convenience functions

	Applying patch from Jeff Franks, with function docs added.
	
	* gtk/gtkcheckbutton.c (gtk_check_button_new_with_mnemonic):
	remove call to set_mnemonic_widget, change docs a bit.	

	* gtk/gtkimagemenuitem.c (gtk_image_menu_item_new_with_mnemonic):
	new function

	* gtk/gtkcheckmenuitem.c (gtk_check_menu_item_new_with_mnemonic):
	new function

	* gtk/gtkmenuitem.c (gtk_menu_item_new_with_mnemonic): new function

	* gtk/gtkradiobutton.c (gtk_radio_button_new_with_mnemonic): new
	function
	(gtk_radio_button_new_with_mnemonic_from_widget): new function

	* gtk/gtkradiomenuitem.c (gtk_radio_menu_item_new_with_mnemonic):
	new function

	* gtk/gtktogglebutton.c (gtk_toggle_button_new_with_mnemonic): new
	function	

	* gtk/gtklabel.c (gtk_label_new_with_mnemonic): Improve docs on 
	auto-selection of mnemonic widget.

Mon Jun  4 15:05:24 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_set_max_width):
	Fix segfault found by Vitaly Tishkov <tvv@sparc.spb.su>.
	(gtk_tree_view_column_set_min_width): ditto.

Tue Jun  5 11:04:06 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpixmap.h (GDK_PIXMAP_GET_CLASS): 
	s/GdkPixmapClass/GdkPixmapObjectClass/. (#51890, Jeff Franks)

Mon Jun  4 12:50:11 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkctree.c (gtk_ctree_insert_gnode): Add a missing
	gtk_clist_thaw().

2001-06-04  Havoc Pennington  <hp@pobox.com>

	* gdk/x11/gdkevents-x11.c (gdk_event_translate): Ignore 
	releases for buttons 6, 7

2001-06-04  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkseparatormenuitem.h: Fix a search-and-replace screwup
	(s/CHECK/SEPARATOR/ gone awry). Patch from Jeff Franks, bug
	#55562

2001-06-04  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_size_request): handle case
	where text_view->layout == NULL by assuming its size is 0, 